--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
   application:
     #应用的名称，可选
     name: reggie_take_out
+  cache:
+    redis:
+      time-to-live: 1800000
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -14,6 +17,8 @@ spring:
       host: localhost
       port: 6379
       database: 0
+
+
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
