--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.2</version>
+        </dependency>
         <!--阿里云短信服务-->
         <dependency>
             <groupId>com.aliyun</groupId>
